--- a/03_pandas_01_series.ipynb
+++ b/03_pandas_01_series.ipynb
@@ -1734,7 +1734,7 @@
       "source": [
         "dt = {'국어국문학과':7,\t'중어중문학과':4,\t'일어일문학과':8,\t'영어영문학과':30,\t'불어불문학과':5,\t'독어독문학과':4,\t'노어노문학과':5,\t'한문학과':6,\t'언어정보학과':3,\t'사학과':7,\t'철학과':5,\t'고고학과':9}"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -1744,29 +1744,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m6XTp1l4JEHr",
-        "outputId": "007ee989-b055-4226-c4e8-880f0e7a33c9"
+        "outputId": "31445c08-f618-4438-acbd-79fa50830a94"
       },
       "source": [
         "# 학과 후보순위\n",
-        " "
+        "sdt = pd.Series(dt)\n",
+        "print(sdt)"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "학과입력 =>\n",
-            "국문학과\n",
-            "해당 학과는 존재하지 않습니다.\n",
-            "종료하시겠습니까?(종료:y)n\n",
-            "학과입력 =>\n",
-            "국어국문학과\n",
-            "국어국문학과 추가 합격 순위 : 후보 7\n",
-            "종료하시겠습니까?(종료:y)영어영문학과\n",
-            "학과입력 =>\n",
-            "영어영문학과\n",
-            "영어영문학과 추가 합격 순위 : 후보 30\n",
-            "종료하시겠습니까?(종료:y)Y\n"
+            "국어국문학과     7\n",
+            "중어중문학과     4\n",
+            "일어일문학과     8\n",
+            "영어영문학과    30\n",
+            "불어불문학과     5\n",
+            "독어독문학과     4\n",
+            "노어노문학과     5\n",
+            "한문학과       6\n",
+            "언어정보학과     3\n",
+            "사학과        7\n",
+            "철학과        5\n",
+            "고고학과       9\n",
+            "dtype: int64\n"
           ],
           "name": "stdout"
         }
@@ -1779,27 +1781,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GupWYDqwJNbZ",
-        "outputId": "0523569c-6e0c-4f73-ab96-70f945b3bb9b"
+        "outputId": "78763561-9a19-4ff9-a408-dcefc803604e"
       },
       "source": [
         "# 후보순위가 3번 이하인 학과와 후보순위가 20번 이상인 학과 조회\n",
-        " "
+        "\n",
+        "# 조건식\n",
+        "print(sdt[sdt.values <= 3].append(sdt[sdt.values >= 20]))"
       ],
-      "execution_count": null,
+      "execution_count": 99,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "영어영문학과    30\n",
-              "언어정보학과     3\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 64
+          "output_type": "stream",
+          "text": [
+            "언어정보학과     3\n",
+            "영어영문학과    30\n",
+            "dtype: int64\n",
+            "중어중문학과    4\n",
+            "독어독문학과    4\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1898,20 +1900,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DSNGbBI2Kw_l",
-        "outputId": "697f131b-4cb4-4c43-ccbd-e53fac536248"
+        "outputId": "74b91d6d-3929-42c4-e5e9-c5be1a0b1c58"
       },
       "source": [
         "#평균 추가 합격 순위\n",
-        " "
+        "int(sdt.mean())"
       ],
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            " 평균 추가 합격 순위 : 7위\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
         }
       ]
     },
@@ -1973,32 +1980,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKNV4QorLIY9",
-        "outputId": "7a41b68a-b366-493f-aa5b-e76b9dd55b31"
+        "outputId": "28a25e3a-dd0a-48e0-fefa-3f4fd8f0b844"
       },
       "source": [
         "#학과 명칭대로 정렬\n",
-        " "
+        "sdt.sort_index()"
       ],
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "고고학과       9\n",
-            "국어국문학과     7\n",
-            "노어노문학과     5\n",
-            "독어독문학과     4\n",
-            "불어불문학과     5\n",
-            "사학과        7\n",
-            "언어정보학과     3\n",
-            "영어영문학과    30\n",
-            "일어일문학과     8\n",
-            "중어중문학과     4\n",
-            "철학과        5\n",
-            "한문학과       6\n",
-            "dtype: int64\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "고고학과       9\n",
+              "국어국문학과     7\n",
+              "노어노문학과     5\n",
+              "독어독문학과     4\n",
+              "불어불문학과     5\n",
+              "사학과        7\n",
+              "언어정보학과     3\n",
+              "영어영문학과    30\n",
+              "일어일문학과     8\n",
+              "중어중문학과     4\n",
+              "철학과        5\n",
+              "한문학과       6\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
         }
       ]
     },
