--- a/04_pandas_02_dataframe.ipynb
+++ b/04_pandas_02_dataframe.ipynb
@@ -13,7 +13,6 @@
         "Cj62A7iA2MuH",
         "OQkafCZj21TB"
       ],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "interpreter": {
@@ -36,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/04_pandas_02_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nnnlog/2021_PNUAC_AIData/blob/main/04_pandas_02_dataframe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,6 +46,30 @@
       "source": [
         "# **DataFrame**\n",
         "+ 2차원 자료구조인 DataFrame는 행과 열이 있는 테이블 데이터\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oY5fHWuaFhrh",
+        "outputId": "c85a8a02-68b2-4a5a-f1e2-fc38076a0f08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -66,7 +89,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -99,7 +122,7 @@
         "pm25_max = [22,18,18,30,23,20,16,19,27,18,26,29,30,27,23,17,16]\n",
         "pm25_min = [16,10,11,12,15,12,11,17,13,9,14,19,14,10,8,9,11]"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -107,18 +130,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 550
+          "height": 573
         },
         "id": "VVTw0bVSNedW",
-        "outputId": "f09e0ca9-d430-4e94-8828-a8705347b5d9"
+        "outputId": "27ac8c8a-6240-4fed-b413-fbe578036f70"
       },
       "source": [
         "#데이터 프레임 생성하기\n",
         " \n",
         "\n",
+        "df = pd.DataFrame()\n",
+        "df['지역'] = area\n",
+        "df['평균'] = pm25_avg\n",
+        "df['최대'] = pm25_max\n",
+        "df['최소'] = pm25_min\n",
+        "\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +325,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -307,12 +336,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h4a2b73e33WN",
-        "outputId": "f9a3d762-15e7-43e3-e8e9-e3a03d31da62"
+        "outputId": "47d50aa2-c9c0-43a4-818b-af24fdda4715"
       },
       "source": [
         "df['지역']"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +370,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 10
         }
       ]
     },
@@ -352,12 +381,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D2XPYMOe36Tl",
-        "outputId": "5cc725d2-3d3b-4db5-e983-378332d5cebb"
+        "outputId": "a70b61dd-b330-49b9-b58f-556356fe6932"
       },
       "source": [
         "type(df['지역'])"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +398,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 11
         }
       ]
     },
@@ -400,196 +429,42 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 550
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rgf7xNS2Owfw",
-        "outputId": "84899483-f729-471f-b82f-8dde0d1efbdb"
+        "outputId": "6ea4c29b-820a-4324-b23a-8161b8c96c03"
       },
       "source": [
         "#지역별주간별_초미세먼지.csv 자료 가져오기\n",
         " \n",
-        "df"
+        "df = pd.read_csv(\"/content/drive/MyDrive/PNU AI/git/data/지역별주간별_초미세먼지.csv\", encoding = \"cp949\")\n",
+        "print(df)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>지역</th>\n",
-              "      <th>주간평균</th>\n",
-              "      <th>최고값</th>\n",
-              "      <th>최저값</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>서울</td>\n",
-              "      <td>20</td>\n",
-              "      <td>22</td>\n",
-              "      <td>16</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>부산</td>\n",
-              "      <td>13</td>\n",
-              "      <td>18</td>\n",
-              "      <td>10</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>대구</td>\n",
-              "      <td>15</td>\n",
-              "      <td>18</td>\n",
-              "      <td>11</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>인천</td>\n",
-              "      <td>20</td>\n",
-              "      <td>30</td>\n",
-              "      <td>12</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>광주</td>\n",
-              "      <td>19</td>\n",
-              "      <td>23</td>\n",
-              "      <td>15</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>대전</td>\n",
-              "      <td>16</td>\n",
-              "      <td>20</td>\n",
-              "      <td>12</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>울산</td>\n",
-              "      <td>14</td>\n",
-              "      <td>16</td>\n",
-              "      <td>11</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>세종</td>\n",
-              "      <td>18</td>\n",
-              "      <td>19</td>\n",
-              "      <td>17</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>경기</td>\n",
-              "      <td>20</td>\n",
-              "      <td>27</td>\n",
-              "      <td>13</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>강원</td>\n",
-              "      <td>14</td>\n",
-              "      <td>18</td>\n",
-              "      <td>9</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>충북</td>\n",
-              "      <td>19</td>\n",
-              "      <td>26</td>\n",
-              "      <td>14</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>충남</td>\n",
-              "      <td>23</td>\n",
-              "      <td>29</td>\n",
-              "      <td>19</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>전북</td>\n",
-              "      <td>23</td>\n",
-              "      <td>30</td>\n",
-              "      <td>14</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>전남</td>\n",
-              "      <td>14</td>\n",
-              "      <td>27</td>\n",
-              "      <td>10</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>경북</td>\n",
-              "      <td>15</td>\n",
-              "      <td>23</td>\n",
-              "      <td>8</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>경남</td>\n",
-              "      <td>13</td>\n",
-              "      <td>17</td>\n",
-              "      <td>9</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>제주</td>\n",
-              "      <td>14</td>\n",
-              "      <td>16</td>\n",
-              "      <td>11</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   지역   주간평균   최고값   최저값 \n",
-              "0   서울     20    22    16\n",
-              "1   부산     13    18    10\n",
-              "2   대구     15    18    11\n",
-              "3   인천     20    30    12\n",
-              "4   광주     19    23    15\n",
-              "5   대전     16    20    12\n",
-              "6   울산     14    16    11\n",
-              "7   세종     18    19    17\n",
-              "8   경기     20    27    13\n",
-              "9   강원     14    18     9\n",
-              "10  충북     19    26    14\n",
-              "11  충남     23    29    19\n",
-              "12  전북     23    30    14\n",
-              "13  전남     14    27    10\n",
-              "14  경북     15    23     8\n",
-              "15  경남     13    17     9\n",
-              "16  제주     14    16    11"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "output_type": "stream",
+          "text": [
+            "   지역   주간평균   최고값   최저값 \n",
+            "0   서울     20    22    16\n",
+            "1   부산     13    18    10\n",
+            "2   대구     15    18    11\n",
+            "3   인천     20    30    12\n",
+            "4   광주     19    23    15\n",
+            "5   대전     16    20    12\n",
+            "6   울산     14    16    11\n",
+            "7   세종     18    19    17\n",
+            "8   경기     20    27    13\n",
+            "9   강원     14    18     9\n",
+            "10  충북     19    26    14\n",
+            "11  충남     23    29    19\n",
+            "12  전북     23    30    14\n",
+            "13  전남     14    27    10\n",
+            "14  경북     15    23     8\n",
+            "15  경남     13    17     9\n",
+            "16  제주     14    16    11\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -627,13 +502,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RPDi18n9SGRu",
-        "outputId": "6518c99c-f04b-4a31-eb7b-9e9c53d68f7d"
+        "outputId": "d5f3ba31-62af-4105-bd7e-6b58b346771f"
       },
       "source": [
         "#데이터프레임의 정보\n",
-        " "
+        "df.info()"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,18 +536,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6TsNgT0b3Js7",
-        "outputId": "99300f78-e5cb-4039-a7e9-29c52b938415"
+        "outputId": "e5f352ad-351c-4720-f181-8e70857f5ea2"
       },
       "source": [
         "#데이터프레임의 크기 확인\n",
-        "print('데이터프레임 (행, 열) : ',  )\n",
-        "print('데이터프레임 행 개수 len : ',   )\n",
-        "print('데이터프레임 행 개수 len : ',   )\n",
-        "print('데이터프레임 행 개수 shape : ',  )\n",
-        "print('데이터프레임 열 개수 len : ',   )\n",
-        "print('데이터프레임 열 개수 shape : ',   )"
+        "print('데이터프레임 (행, 열) : ', df.shape)\n",
+        "print('데이터프레임 행 개수 len : ',   len(df))\n",
+        "print('데이터프레임 행 개수 len : ',   len(df.index))\n",
+        "print('데이터프레임 행 개수 shape : ',  df.shape[0])\n",
+        "print('데이터프레임 열 개수 len : ',   len(df.columns))\n",
+        "print('데이터프레임 열 개수 shape : ',   df.shape[1])"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -695,15 +570,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x820CTxf7sUS",
-        "outputId": "f5f7db34-d916-4739-a30e-78c5cc669747"
+        "outputId": "4eef495c-9e33-4314-b63d-7081681c573e"
       },
       "source": [
         "#데이터프레임 각 열의개수 확인\n",
-        "print( )\n",
+        "print(df.count())\n",
         "print('-'*20)\n",
-        "print( )"
+        "print(df.count(axis='columns'))"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,13 +619,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-_PcsEFSDcsV",
-        "outputId": "8c92486c-8cbc-4935-d69c-675d96f48e86"
+        "outputId": "f05dc8e6-b21d-4efb-dc62-842586a4fc22"
       },
       "source": [
         "#데이터프레임의 원소의 총개수\n",
-        "print( )"
+        "print(df.size)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,14 +643,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1VWiVWQ_SQtl",
-        "outputId": "90542c38-3726-43f2-9d06-5b091a6c007d"
+        "outputId": "732672f3-0ea9-460e-e901-fb8d4eb761d4"
       },
       "source": [
         "#데이터프레임의 인덱스\n",
-        "print('열인덱스 : ',  )\n",
-        "print('행인덱스 :',  )"
+        "print('열인덱스 : ', df.columns)\n",
+        "print('행인덱스 :', df.index)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,15 +669,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HTgaV9Y47zOt",
-        "outputId": "dc706657-9dbd-40f2-f92f-cf4261e70af2"
+        "outputId": "438438dc-fb92-43b8-9cb5-37b32cf2dd39"
       },
       "source": [
         "#각 문자열 요소에서 공백 제거\n",
         "lt = ['지역 ', '주간평균 ', '최고값 ', '최저값 ']\n",
-        "lt = \n",
+        "lt = [item.strip() for item in lt]\n",
         "lt"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +689,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 23
         }
       ]
     },
@@ -870,13 +745,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DxsgZnmASZ-V",
-        "outputId": "90428054-b515-4366-d6c9-29dc80714407"
+        "outputId": "21209ead-6cea-417a-ed19-d1e9d270ba56"
       },
       "source": [
         "#열명의 공백 제거 \n",
-        " "
+        "df.columns = [item.strip() for item in df.columns]\n",
+        "df.columns"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -888,7 +764,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 24
         }
       ]
     },
@@ -942,17 +818,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 580
+          "height": 603
         },
         "id": "SI96LxJ1UTrM",
-        "outputId": "0d15d652-91c9-4fe5-897d-1264d7f259b9"
+        "outputId": "91154f4a-e442-4c8b-fcf1-dbec987d1bfa"
       },
       "source": [
         "#지역 컬럼을 행 인덱스로 지정\n",
         " \n",
+        "df = df.set_index(\"지역\")\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +996,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 25
         }
       ]
     },
