--- a/03_pandas_01_series.ipynb
+++ b/03_pandas_01_series.ipynb
@@ -100,7 +100,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
         "print(slt)\n",
         "print(type(slt))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
       "source": [
         "print(slt[2])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "print(slt.keys())\n",
         "print(slt.values)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
         "\n",
         "print(sdt)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +299,7 @@
         "print('index :', sdt.keys())\n",
         "print('value :', sdt.values)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "#3월의 값 가져오기\n",
         "print(sdt['3월'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "ltk = ['1월', '2월', '3월', '4월', '5월', '6월']\n",
         "lt = [4.1, 5.5, 9.0, 15.0, 19.0 ,21.3]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "slt = pd.Series(lt, index=ltk)\n",
         "print(slt)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
         "slt.index = ltk\n",
         "print(slt)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +459,7 @@
       "source": [
         "slt.index"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,7 +489,7 @@
         "slt.index = ltk\n",
         "print(slt)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +534,7 @@
         "print(slt)\n",
         "print(slt2)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "#slt 시리즈에서 인덱스가 2인 항목 값 가져오기\n",
         "print(slt[2])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,7 @@
         "#slt2 시리즈에서 3월의 값가져오기\n",
         "print(slt2['3월'])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +641,7 @@
         "sub1 = slt[1:3]\n",
         "print(sub1)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,7 +668,7 @@
         "sub2 = slt2['1월':'3월']\n",
         "print(sub2)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +696,7 @@
         "sub1_1 = slt[[1, 3, 5]]\n",
         "print(sub1_1)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,7 @@
         "sub2_1 = slt2[[\"2월\", \"4월\", \"6월\"]]\n",
         "print(sub2_1)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +759,7 @@
       "source": [
         "print(slt)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +788,7 @@
       "source": [
         "slt > 10"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
         "#값이 10보다 큰 자료 추출1\n",
         "slt[slt > 10]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
         "#값이 10보다 큰 자료 추출2\n",
         "slt[slt.values > 10]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -887,7 +887,7 @@
         "#인덱스가 3보다 크거나 같은 자료 추출\n",
         "slt[slt.index >= 3]"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +931,7 @@
         "print(slt)\n",
         "print(slt2)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -968,7 +968,7 @@
         "#인덱스가 다른 경우\n",
         "print(slt + slt2)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1005,7 +1005,7 @@
         "print(slt)\n",
         "print(slt2)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1043,7 @@
         "print(slt + slt2)\n",
         "print(slt * slt2)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1095,7 @@
       "source": [
         "print(slt)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1125,7 +1125,7 @@
         "#상위 5개 자료 추출\n",
         "slt.head(5)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1159,7 +1159,7 @@
         "#하위 2개 자료 추출\n",
         "slt.tail(2)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1190,7 +1190,7 @@
         "#시리즈 통계 요약\n",
         "slt.describe()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1227,7 @@
         "#시리즈 값 평균\n",
         "slt.mean()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1270,7 @@
         "sdt1 = pd.Series(dt)  \n",
         "sdt2 = pd.Series(dt.values()) "
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1288,7 +1288,7 @@
         "print('[시리즈2]')\n",
         "print(sdt2) "
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1326,7 @@
       "source": [
         "print('비교 :', sdt1.equals(sdt2))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1354,7 +1354,7 @@
         " \n",
         "print(sdt1)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1385,7 +1385,7 @@
         "sdt1 = sdt1.replace(15, 15.5)\n",
         "print(sdt1)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1417,7 +1417,7 @@
         "sdt1[sdt1.isin([15.5, 19.0])]\n",
         " "
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1461,7 +1461,7 @@
         "\n",
         "print(sdt1)"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1500,7 +1500,7 @@
         " \n",
         "sdt1.append(sdt2)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,7 +1551,7 @@
         "print(sdt1.sort_index(ascending=False))\n",
         "#시리즈 인덱스로 역순으로 정렬하기"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1590,7 @@
         "#시리즈 데이터 프레임으로 변환하기\n",
         "sdt1.to_frame()"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1677,7 +1677,7 @@
       "source": [
         "type(sdt1)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1732,9 +1732,10 @@
         "id": "meuWOzumGhI4"
       },
       "source": [
+        "import pandas as pd\n",
         "dt = {'국어국문학과':7,\t'중어중문학과':4,\t'일어일문학과':8,\t'영어영문학과':30,\t'불어불문학과':5,\t'독어독문학과':4,\t'노어노문학과':5,\t'한문학과':6,\t'언어정보학과':3,\t'사학과':7,\t'철학과':5,\t'고고학과':9}"
       ],
-      "execution_count": 74,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1744,14 +1745,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m6XTp1l4JEHr",
-        "outputId": "31445c08-f618-4438-acbd-79fa50830a94"
+        "outputId": "0cd0d68e-7f00-4f09-bd6f-f77c36b0b734"
       },
       "source": [
         "# 학과 후보순위\n",
         "sdt = pd.Series(dt)\n",
         "print(sdt)"
       ],
-      "execution_count": 76,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1781,7 +1782,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GupWYDqwJNbZ",
-        "outputId": "78763561-9a19-4ff9-a408-dcefc803604e"
+        "outputId": "b61555f1-e4c4-4add-f074-c7236e7b58e6"
       },
       "source": [
         "# 후보순위가 3번 이하인 학과와 후보순위가 20번 이상인 학과 조회\n",
@@ -1789,16 +1790,13 @@
         "# 조건식\n",
         "print(sdt[sdt.values <= 3].append(sdt[sdt.values >= 20]))"
       ],
-      "execution_count": 99,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "언어정보학과     3\n",
             "영어영문학과    30\n",
-            "dtype: int64\n",
-            "중어중문학과    4\n",
-            "독어독문학과    4\n",
             "dtype: int64\n"
           ],
           "name": "stdout"
@@ -1812,12 +1810,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4629Y849zscy",
-        "outputId": "9e38b138-e4e0-453b-d545-ace9617da355"
+        "outputId": "d403c2a8-0879-4d0c-a687-71b4913f0cbb"
       },
       "source": [
-        " "
+        " sdt[['언어정보학과']]"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1830,7 +1828,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 8
         }
       ]
     },
@@ -1841,12 +1839,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h29SMwL3zvXD",
-        "outputId": "a49f194f-5715-4b98-e4e9-25991ef5e403"
+        "outputId": "b6255ad8-1689-455e-ff2b-a3de6cf0faa8"
       },
       "source": [
-        " "
+        "sdt[['영어영문학과']]"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1859,7 +1857,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 10
         }
       ]
     },
@@ -1870,12 +1868,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L2KvDt6VKT4Z",
-        "outputId": "416d3fc9-8b78-4726-c7b5-d86f7aeebe19"
+        "outputId": "0be8cfab-b9ee-459f-f468-eebbdebd06c1"
       },
       "source": [
-        " "
+        " sdt[['언어정보학과', '영어영문학과']]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1889,7 +1887,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 11
         }
       ]
     },
@@ -1900,13 +1898,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DSNGbBI2Kw_l",
-        "outputId": "74b91d6d-3929-42c4-e5e9-c5be1a0b1c58"
+        "outputId": "5dc60c2e-0447-4a89-ecab-7ba7bbada5a1"
       },
       "source": [
         "#평균 추가 합격 순위\n",
         "int(sdt.mean())"
       ],
-      "execution_count": 101,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1918,20 +1916,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 12
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gxBiY2vO0Osc"
-      },
-      "source": [
-        " "
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1940,36 +1927,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IVaxfjTA0Unf",
-        "outputId": "67a75d33-da4e-401c-f12d-87e3f48a21fa"
+        "outputId": "418d7c46-7041-49ea-e834-ff393a7c02b7"
       },
       "source": [
-        " "
+        " sdt"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "언어정보학과     3\n",
-              "독어독문학과     4\n",
-              "중어중문학과     4\n",
-              "노어노문학과     5\n",
-              "불어불문학과     5\n",
-              "철학과        5\n",
-              "한문학과       6\n",
               "국어국문학과     7\n",
-              "사학과        7\n",
+              "중어중문학과     4\n",
               "일어일문학과     8\n",
-              "고고학과       9\n",
               "영어영문학과    30\n",
+              "불어불문학과     5\n",
+              "독어독문학과     4\n",
+              "노어노문학과     5\n",
+              "한문학과       6\n",
+              "언어정보학과     3\n",
+              "사학과        7\n",
+              "철학과        5\n",
+              "고고학과       9\n",
               "dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 13
         }
       ]
     },
@@ -1980,13 +1967,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NKNV4QorLIY9",
-        "outputId": "28a25e3a-dd0a-48e0-fefa-3f4fd8f0b844"
+        "outputId": "77a13ec8-e5d0-4c6a-d52c-4100bf54d01c"
       },
       "source": [
         "#학과 명칭대로 정렬\n",
         "sdt.sort_index()"
       ],
-      "execution_count": 108,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2010,47 +1997,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ddfc1hQk0HXo",
-        "outputId": "1e82d13a-fedc-4190-fbf3-2709e3f666bf"
-      },
-      "source": [
-        " "
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "고고학과       9\n",
-              "국어국문학과     7\n",
-              "노어노문학과     5\n",
-              "독어독문학과     4\n",
-              "불어불문학과     5\n",
-              "사학과        7\n",
-              "언어정보학과     3\n",
-              "영어영문학과    30\n",
-              "일어일문학과     8\n",
-              "중어중문학과     4\n",
-              "철학과        5\n",
-              "한문학과       6\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 72
+          "execution_count": 14
         }
       ]
     }
